--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1233,10 +1233,10 @@ input[type="radio"] + label:before {
     top: 0.25em; }
   .image.fit {
     display: block;
-    margin: 0 0 2em 0;
+    margin: 30px 0 2em 0;
     width: 100%; }
     .image.fit img {
-      width: 100%; }
+      width: 80%; }
   .image.main {
     display: block;
     margin: 0 0 3em 0;
