--- a/src/style.css
+++ b/src/style.css
@@ -6,12 +6,17 @@ ul {
     list-style: none;
 }
 
+.workbrainLog{
+    width: 30px;
+
+}
+
 .menu-btn {
+    width: 250px;
     transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
     background-color: transparent;
-    border-radius: 0.375em;
     border: 0;
-    box-shadow: inset 0 0 0 2px var(--main-color);
+    border-bottom: 1px solid #929292;
     color: var(--main-color);
     cursor: pointer;
     font-family: "Roboto Slab", serif;
@@ -20,8 +25,31 @@ ul {
     height: 3.5em;
     letter-spacing: 0.075em;
     line-height: 3.5em;
-    padding: 0 2.25em;
-    text-align: center;
+    padding: 0 1.25em;
+    text-align: left;
+    text-decoration: none;
+    white-space: nowrap;
+    font: inherit;
+    vertical-align: baseline;
+}
+
+.return-btn {
+    width: 125px;
+    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+    background-color: transparent;
+    border: 0;
+    /* border-bottom: 1px solid #6a6a6a; */
+    color: #929292;
+    cursor: pointer;
+    font-family: "Roboto Slab", serif;
+    font-size: 0.4em;
+    font-weight: 500;
+    height: 2.5em;
+    letter-spacing: 0.075em;
+    line-height: 3.5em;
+    padding: 0 3.25em;
+    /* padding-left: 0 10.25em; */
+    text-align: left;
     text-decoration: none;
     white-space: nowrap;
     font: inherit;
